--- a/requirements.txt
+++ b/requirements.txt
@@ -1,236 +1,26 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
-altgraph==0.17.3
-argcomplete==2.0.0
 async-timeout==4.0.2
 attrs==23.1.0
-beautifulsoup4==4.11.2
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.0.1
-click==8.1.3
-colorclass==2.2.2
-compressed-rtf==1.0.6
-configparser==5.3.0
-cryptography==39.0.0
-docx2txt==0.8
-easygui==0.98.3
-ebcdic==1.1.1
-EbookLib==0.18
-et-xmlfile==1.1.0
-extract-msg==0.39.0
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
 frozenlist==1.3.3
 idna==3.4
-IMAPClient==2.3.1
-imessage-reader==0.4.0
-joblib==1.2.0
-lark-parser==0.12.0
-lxml==4.9.2
-macholib==1.16.2
-MarkupSafe==1.1.1
-modulegraph==0.19.3
-msoffcrypto-tool==5.0.0
 multidict==6.0.4
-mySecrets==1.0.4
 ndjson==0.3.1
-nltk==3.8.1
-numpy==1.24.2
-ocrmac==0.1.1
-olefile==0.46
-oletools==0.60.1
-openai==0.27.6
-openpyxl==3.1.0
-packaging==23.0
-pcodedmp==1.2.6
-pdfminer.six==20221105
-Pillow==9.4.0
-pip-review==1.3.0
-py-imessage-shortcuts==1.0.2
-py2app==0.28.5
-pycparser==2.21
-pycryptodome==3.17
-pyinstaller==5.7.0
-pyinstaller-hooks-contrib==2022.15
-pyobjc==9.1.1
-pyobjc-core==9.1.1
-pyobjc-framework-Accessibility==9.1.1
-pyobjc-framework-Accounts==9.1.1
-pyobjc-framework-AddressBook==9.1.1
-pyobjc-framework-AdServices==9.1.1
-pyobjc-framework-AdSupport==9.1.1
-pyobjc-framework-AppleScriptKit==9.1.1
-pyobjc-framework-AppleScriptObjC==9.1.1
-pyobjc-framework-ApplicationServices==9.1.1
-pyobjc-framework-AppTrackingTransparency==9.1.1
-pyobjc-framework-AudioVideoBridging==9.1.1
-pyobjc-framework-AuthenticationServices==9.1.1
-pyobjc-framework-AutomaticAssessmentConfiguration==9.1.1
-pyobjc-framework-Automator==9.1.1
-pyobjc-framework-AVFoundation==9.1.1
-pyobjc-framework-AVKit==9.1.1
-pyobjc-framework-AVRouting==9.1.1
-pyobjc-framework-BackgroundAssets==9.1.1
-pyobjc-framework-BusinessChat==9.1.1
-pyobjc-framework-CalendarStore==9.1.1
-pyobjc-framework-CallKit==9.1.1
-pyobjc-framework-CFNetwork==9.1.1
-pyobjc-framework-ClassKit==9.1.1
-pyobjc-framework-CloudKit==9.1.1
-pyobjc-framework-Cocoa==9.1.1
-pyobjc-framework-Collaboration==9.1.1
-pyobjc-framework-ColorSync==9.1.1
-pyobjc-framework-Contacts==9.1.1
-pyobjc-framework-ContactsUI==9.1.1
-pyobjc-framework-CoreAudio==9.1.1
-pyobjc-framework-CoreAudioKit==9.1.1
-pyobjc-framework-CoreBluetooth==9.1.1
-pyobjc-framework-CoreData==9.1.1
-pyobjc-framework-CoreHaptics==9.1.1
-pyobjc-framework-CoreLocation==9.1.1
-pyobjc-framework-CoreMedia==9.1.1
-pyobjc-framework-CoreMediaIO==9.1.1
-pyobjc-framework-CoreMIDI==9.1.1
-pyobjc-framework-CoreML==9.1.1
-pyobjc-framework-CoreMotion==9.1.1
-pyobjc-framework-CoreServices==9.1.1
-pyobjc-framework-CoreSpotlight==9.1.1
-pyobjc-framework-CoreText==9.1.1
-pyobjc-framework-CoreWLAN==9.1.1
-pyobjc-framework-CryptoTokenKit==9.1.1
-pyobjc-framework-DataDetection==9.1.1
-pyobjc-framework-DeviceCheck==9.1.1
-pyobjc-framework-DictionaryServices==9.1.1
-pyobjc-framework-DiscRecording==9.1.1
-pyobjc-framework-DiscRecordingUI==9.1.1
-pyobjc-framework-DiskArbitration==9.1.1
-pyobjc-framework-DVDPlayback==9.1.1
-pyobjc-framework-EventKit==9.1.1
-pyobjc-framework-ExceptionHandling==9.1.1
-pyobjc-framework-ExecutionPolicy==9.1.1
-pyobjc-framework-ExtensionKit==9.1.1
-pyobjc-framework-ExternalAccessory==9.1.1
-pyobjc-framework-FileProvider==9.1.1
-pyobjc-framework-FileProviderUI==9.1.1
-pyobjc-framework-FinderSync==9.1.1
-pyobjc-framework-FSEvents==9.1.1
-pyobjc-framework-GameCenter==9.1.1
-pyobjc-framework-GameController==9.1.1
-pyobjc-framework-GameKit==9.1.1
-pyobjc-framework-GameplayKit==9.1.1
-pyobjc-framework-HealthKit==9.1.1
-pyobjc-framework-ImageCaptureCore==9.1.1
-pyobjc-framework-IMServicePlugIn==9.1.1
-pyobjc-framework-InputMethodKit==9.1.1
-pyobjc-framework-InstallerPlugins==9.1.1
-pyobjc-framework-InstantMessage==9.1.1
-pyobjc-framework-Intents==9.1.1
-pyobjc-framework-IntentsUI==9.1.1
-pyobjc-framework-IOBluetooth==9.1.1
-pyobjc-framework-IOBluetoothUI==9.1.1
-pyobjc-framework-IOSurface==9.1.1
-pyobjc-framework-iTunesLibrary==9.1.1
-pyobjc-framework-KernelManagement==9.1.1
-pyobjc-framework-LatentSemanticMapping==9.1.1
-pyobjc-framework-LaunchServices==9.1.1
-pyobjc-framework-libdispatch==9.1.1
-pyobjc-framework-libxpc==9.1.1
-pyobjc-framework-LinkPresentation==9.1.1
-pyobjc-framework-LocalAuthentication==9.1.1
-pyobjc-framework-LocalAuthenticationEmbeddedUI==9.1.1
-pyobjc-framework-MailKit==9.1.1
-pyobjc-framework-MapKit==9.1.1
-pyobjc-framework-MediaAccessibility==9.1.1
-pyobjc-framework-MediaLibrary==9.1.1
-pyobjc-framework-MediaPlayer==9.1.1
-pyobjc-framework-MediaToolbox==9.1.1
-pyobjc-framework-Metal==9.1.1
-pyobjc-framework-MetalFX==9.1.1
-pyobjc-framework-MetalKit==9.1.1
-pyobjc-framework-MetalPerformanceShaders==9.1.1
-pyobjc-framework-MetalPerformanceShadersGraph==9.1.1
-pyobjc-framework-MetricKit==9.1.1
-pyobjc-framework-MLCompute==9.1.1
-pyobjc-framework-ModelIO==9.1.1
-pyobjc-framework-MultipeerConnectivity==9.1.1
-pyobjc-framework-NaturalLanguage==9.1.1
-pyobjc-framework-NetFS==9.1.1
-pyobjc-framework-Network==9.1.1
-pyobjc-framework-NetworkExtension==9.1.1
-pyobjc-framework-NotificationCenter==9.1.1
-pyobjc-framework-OpenDirectory==9.1.1
-pyobjc-framework-OSAKit==9.1.1
-pyobjc-framework-OSLog==9.1.1
-pyobjc-framework-PassKit==9.1.1
-pyobjc-framework-PencilKit==9.1.1
-pyobjc-framework-PHASE==9.1.1
-pyobjc-framework-Photos==9.1.1
-pyobjc-framework-PhotosUI==9.1.1
-pyobjc-framework-PreferencePanes==9.1.1
-pyobjc-framework-PushKit==9.1.1
-pyobjc-framework-Quartz==9.1.1
-pyobjc-framework-QuickLookThumbnailing==9.1.1
-pyobjc-framework-ReplayKit==9.1.1
-pyobjc-framework-SafariServices==9.1.1
-pyobjc-framework-SafetyKit==9.1.1
-pyobjc-framework-SceneKit==9.1.1
-pyobjc-framework-ScreenCaptureKit==9.1.1
-pyobjc-framework-ScreenSaver==9.1.1
-pyobjc-framework-ScreenTime==9.1.1
-pyobjc-framework-ScriptingBridge==9.1.1
-pyobjc-framework-SearchKit==9.1.1
-pyobjc-framework-Security==9.1.1
-pyobjc-framework-SecurityFoundation==9.1.1
-pyobjc-framework-SecurityInterface==9.1.1
-pyobjc-framework-ServiceManagement==9.1.1
-pyobjc-framework-SharedWithYou==9.1.1
-pyobjc-framework-SharedWithYouCore==9.1.1
-pyobjc-framework-ShazamKit==9.1.1
-pyobjc-framework-Social==9.1.1
-pyobjc-framework-SoundAnalysis==9.1.1
-pyobjc-framework-Speech==9.1.1
-pyobjc-framework-SpriteKit==9.1.1
-pyobjc-framework-StoreKit==9.1.1
-pyobjc-framework-SyncServices==9.1.1
-pyobjc-framework-SystemConfiguration==9.1.1
-pyobjc-framework-SystemExtensions==9.1.1
-pyobjc-framework-ThreadNetwork==9.1.1
-pyobjc-framework-UniformTypeIdentifiers==9.1.1
-pyobjc-framework-UserNotifications==9.1.1
-pyobjc-framework-UserNotificationsUI==9.1.1
-pyobjc-framework-VideoSubscriberAccount==9.1.1
-pyobjc-framework-VideoToolbox==9.1.1
-pyobjc-framework-Virtualization==9.1.1
-pyobjc-framework-Vision==9.1.1
-pyobjc-framework-WebKit==9.1.1
-pyparsing==2.4.7
+openai==0.27.8
+packaging==23.1
+Pillow==9.5.0
 pyperclip==1.8.2
-PySimpleGUI==4.60.4
+PySimpleGUI==4.60.5
+pytesseract==0.3.10
 python-magic==0.4.27
-python-pptx==0.6.21
-pyttsx3==2.90
-pytz==2019.3
-pytz-deprecation-shim==0.1.0.post0
-pyzbar==0.1.9
-red-black-tree-mod==1.20
-regex==2022.10.31
-requests==2.28.2
-RTFDE==0.0.2
-six==1.16.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SpeechRecognition==3.10.0
-srt==3.5.2
-textblob==0.17.1
-textract==1.5.0
-tiktoken==0.3.3
-tk==0.1.0
-tqdm==4.64.1
-tzdata==2022.7
-tzlocal==4.2
-urllib3==1.26.14
-websockets==10.4
-xlrd==2.0.1
-XlsxWriter==3.0.7
-yapf==0.32.0
+regex==2023.6.3
+requests==2.31.0
+soupsieve==2.4.1
+tiktoken==0.4.0
+tqdm==4.65.0
+urllib3==2.0.3
 yarl==1.9.2
