--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ ndjson==0.3.1
 openai==0.27.8
 packaging==23.1
 Pillow==9.5.0
+puremagic==1.15
 pyperclip==1.8.2
 PySimpleGUI==4.60.5
 pytesseract==0.3.10
-python-magic==0.4.27
 regex==2023.6.3
 requests==2.31.0
 soupsieve==2.4.1
