--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+altgraph==0.17.3
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -8,12 +9,15 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 frozenlist==1.3.3
 idna==3.4
+macholib==1.16.2
 multidict==6.0.4
 ndjson==0.3.1
 openai==0.27.8
 packaging==23.1
 Pillow==9.5.0
 puremagic==1.15
+pyinstaller==5.13.0
+pyinstaller-hooks-contrib==2023.5
 pyperclip==1.8.2
 PySimpleGUI==4.60.5
 pytesseract==0.3.10
