--- a/requirements.txt
+++ b/requirements.txt
@@ -1,325 +1,30 @@
-absl-py==2.0.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 altgraph==0.17.3
-annotated-types==0.6.0
-antlr4-python3-runtime==4.9.3
-anyio==4.3.0
-astunparse==1.6.3
 async-timeout==4.0.2
 attrs==23.1.0
-backoff==2.2.1
 beautifulsoup4==4.12.2
 bs4==0.0.1
-cachetools==5.3.2
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-coloredlogs==15.0.1
-contourpy==1.2.0
-cryptography==42.0.4
-cycler==0.12.1
-dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
-Deprecated==1.2.14
-effdet==0.4.1
-emoji==2.10.1
-et-xmlfile==1.1.0
-exceptiongroup==1.2.0
-filelock==3.13.1
-filetype==1.2.0
-flatbuffers==23.5.26
-fonttools==4.49.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
 frozenlist==1.3.3
-fsspec==2023.10.0
-gast==0.5.4
-google-auth==2.23.4
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-greenlet==3.0.3
-grpcio==1.59.2
-h11==0.14.0
-h5py==3.10.0
-huggingface-hub==0.17.3
-humanfriendly==10.0
 idna==3.4
-iopath==0.1.10
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-keras==2.14.0
-kiwisolver==1.4.5
-langchain==0.1.9
-langchain-community==0.0.24
-langchain-core==0.1.26
-langdetect==1.0.9
-langsmith==0.1.6
-layoutparser==0.3.4
-libclang==16.0.6
-lxml==5.1.0
 macholib==1.16.2
-Markdown==3.5.1
-MarkupSafe==2.1.3
-marshmallow==3.20.2
-matplotlib==3.8.3
-ml-dtypes==0.2.0
-mpmath==1.3.0
-msg-parser==1.2.0
 multidict==6.0.4
-mypy-extensions==1.0.0
 ndjson==0.3.1
-networkx==3.2.1
-nltk==3.8.1
-numpy==1.26.1
-oauthlib==3.2.2
-olefile==0.47
-omegaconf==2.3.0
-onnx==1.15.0
-onnxruntime==1.15.1
 openai==0.27.8
-opencv-python==4.9.0.80
-openpyxl==3.1.2
-opt-einsum==3.3.0
-orjson==3.9.15
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.2.1
-pdf2image==1.17.0
-pdfminer.six==20221105
-pdfplumber==0.10.4
-pikepdf==8.13.0
-pillow==10.2.0
-pillow_heif==0.15.0
-playwright==1.41.2
-portalocker==2.8.2
-protobuf==4.25.0
+packaging==23.1
+Pillow==9.5.0
 puremagic==1.15
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycocotools==2.0.7
-pycparser==2.21
-pydantic==2.6.2
-pydantic_core==2.16.3
-pyee==11.0.1
 pyinstaller==5.13.0
 pyinstaller-hooks-contrib==2023.5
-pyobjc==10.1
-pyobjc-core==10.1
-pyobjc-framework-Accessibility==10.1
-pyobjc-framework-Accounts==10.1
-pyobjc-framework-AddressBook==10.1
-pyobjc-framework-AdServices==10.1
-pyobjc-framework-AdSupport==10.1
-pyobjc-framework-AppleScriptKit==10.1
-pyobjc-framework-AppleScriptObjC==10.1
-pyobjc-framework-ApplicationServices==10.1
-pyobjc-framework-AppTrackingTransparency==10.1
-pyobjc-framework-AudioVideoBridging==10.1
-pyobjc-framework-AuthenticationServices==10.1
-pyobjc-framework-AutomaticAssessmentConfiguration==10.1
-pyobjc-framework-Automator==10.1
-pyobjc-framework-AVFoundation==10.1
-pyobjc-framework-AVKit==10.1
-pyobjc-framework-AVRouting==10.1
-pyobjc-framework-BackgroundAssets==10.1
-pyobjc-framework-BusinessChat==10.1
-pyobjc-framework-CalendarStore==10.1
-pyobjc-framework-CallKit==10.1
-pyobjc-framework-CFNetwork==10.1
-pyobjc-framework-Cinematic==10.1
-pyobjc-framework-ClassKit==10.1
-pyobjc-framework-CloudKit==10.1
-pyobjc-framework-Cocoa==10.1
-pyobjc-framework-Collaboration==10.1
-pyobjc-framework-ColorSync==10.1
-pyobjc-framework-Contacts==10.1
-pyobjc-framework-ContactsUI==10.1
-pyobjc-framework-CoreAudio==10.1
-pyobjc-framework-CoreAudioKit==10.1
-pyobjc-framework-CoreBluetooth==10.1
-pyobjc-framework-CoreData==10.1
-pyobjc-framework-CoreHaptics==10.1
-pyobjc-framework-CoreLocation==10.1
-pyobjc-framework-CoreMedia==10.1
-pyobjc-framework-CoreMediaIO==10.1
-pyobjc-framework-CoreMIDI==10.1
-pyobjc-framework-CoreML==10.1
-pyobjc-framework-CoreMotion==10.1
-pyobjc-framework-CoreServices==10.1
-pyobjc-framework-CoreSpotlight==10.1
-pyobjc-framework-CoreText==10.1
-pyobjc-framework-CoreWLAN==10.1
-pyobjc-framework-CryptoTokenKit==10.1
-pyobjc-framework-DataDetection==10.1
-pyobjc-framework-DeviceCheck==10.1
-pyobjc-framework-DictionaryServices==10.1
-pyobjc-framework-DiscRecording==10.1
-pyobjc-framework-DiscRecordingUI==10.1
-pyobjc-framework-DiskArbitration==10.1
-pyobjc-framework-DVDPlayback==10.1
-pyobjc-framework-EventKit==10.1
-pyobjc-framework-ExceptionHandling==10.1
-pyobjc-framework-ExecutionPolicy==10.1
-pyobjc-framework-ExtensionKit==10.1
-pyobjc-framework-ExternalAccessory==10.1
-pyobjc-framework-FileProvider==10.1
-pyobjc-framework-FileProviderUI==10.1
-pyobjc-framework-FinderSync==10.1
-pyobjc-framework-FSEvents==10.1
-pyobjc-framework-GameCenter==10.1
-pyobjc-framework-GameController==10.1
-pyobjc-framework-GameKit==10.1
-pyobjc-framework-GameplayKit==10.1
-pyobjc-framework-HealthKit==10.1
-pyobjc-framework-ImageCaptureCore==10.1
-pyobjc-framework-InputMethodKit==10.1
-pyobjc-framework-InstallerPlugins==10.1
-pyobjc-framework-InstantMessage==10.1
-pyobjc-framework-Intents==10.1
-pyobjc-framework-IntentsUI==10.1
-pyobjc-framework-IOBluetooth==10.1
-pyobjc-framework-IOBluetoothUI==10.1
-pyobjc-framework-IOSurface==10.1
-pyobjc-framework-iTunesLibrary==10.1
-pyobjc-framework-KernelManagement==10.1
-pyobjc-framework-LatentSemanticMapping==10.1
-pyobjc-framework-LaunchServices==10.1
-pyobjc-framework-libdispatch==10.1
-pyobjc-framework-libxpc==10.1
-pyobjc-framework-LinkPresentation==10.1
-pyobjc-framework-LocalAuthentication==10.1
-pyobjc-framework-LocalAuthenticationEmbeddedUI==10.1
-pyobjc-framework-MailKit==10.1
-pyobjc-framework-MapKit==10.1
-pyobjc-framework-MediaAccessibility==10.1
-pyobjc-framework-MediaLibrary==10.1
-pyobjc-framework-MediaPlayer==10.1
-pyobjc-framework-MediaToolbox==10.1
-pyobjc-framework-Metal==10.1
-pyobjc-framework-MetalFX==10.1
-pyobjc-framework-MetalKit==10.1
-pyobjc-framework-MetalPerformanceShaders==10.1
-pyobjc-framework-MetalPerformanceShadersGraph==10.1
-pyobjc-framework-MetricKit==10.1
-pyobjc-framework-MLCompute==10.1
-pyobjc-framework-ModelIO==10.1
-pyobjc-framework-MultipeerConnectivity==10.1
-pyobjc-framework-NaturalLanguage==10.1
-pyobjc-framework-NetFS==10.1
-pyobjc-framework-Network==10.1
-pyobjc-framework-NetworkExtension==10.1
-pyobjc-framework-NotificationCenter==10.1
-pyobjc-framework-OpenDirectory==10.1
-pyobjc-framework-OSAKit==10.1
-pyobjc-framework-OSLog==10.1
-pyobjc-framework-PassKit==10.1
-pyobjc-framework-PencilKit==10.1
-pyobjc-framework-PHASE==10.1
-pyobjc-framework-Photos==10.1
-pyobjc-framework-PhotosUI==10.1
-pyobjc-framework-PreferencePanes==10.1
-pyobjc-framework-PushKit==10.1
-pyobjc-framework-Quartz==10.1
-pyobjc-framework-QuickLookThumbnailing==10.1
-pyobjc-framework-ReplayKit==10.1
-pyobjc-framework-SafariServices==10.1
-pyobjc-framework-SafetyKit==10.1
-pyobjc-framework-SceneKit==10.1
-pyobjc-framework-ScreenCaptureKit==10.1
-pyobjc-framework-ScreenSaver==10.1
-pyobjc-framework-ScreenTime==10.1
-pyobjc-framework-ScriptingBridge==10.1
-pyobjc-framework-SearchKit==10.1
-pyobjc-framework-Security==10.1
-pyobjc-framework-SecurityFoundation==10.1
-pyobjc-framework-SecurityInterface==10.1
-pyobjc-framework-SensitiveContentAnalysis==10.1
-pyobjc-framework-ServiceManagement==10.1
-pyobjc-framework-SharedWithYou==10.1
-pyobjc-framework-SharedWithYouCore==10.1
-pyobjc-framework-ShazamKit==10.1
-pyobjc-framework-Social==10.1
-pyobjc-framework-SoundAnalysis==10.1
-pyobjc-framework-Speech==10.1
-pyobjc-framework-SpriteKit==10.1
-pyobjc-framework-StoreKit==10.1
-pyobjc-framework-Symbols==10.1
-pyobjc-framework-SyncServices==10.1
-pyobjc-framework-SystemConfiguration==10.1
-pyobjc-framework-SystemExtensions==10.1
-pyobjc-framework-ThreadNetwork==10.1
-pyobjc-framework-UniformTypeIdentifiers==10.1
-pyobjc-framework-UserNotifications==10.1
-pyobjc-framework-UserNotificationsUI==10.1
-pyobjc-framework-VideoSubscriberAccount==10.1
-pyobjc-framework-VideoToolbox==10.1
-pyobjc-framework-Virtualization==10.1
-pyobjc-framework-Vision==10.1
-pyobjc-framework-WebKit==10.1
-pypandoc==1.13
-pyparsing==3.1.1
-pypdf==4.0.2
-pypdfium2==4.27.0
 pyperclip==1.8.2
 PySimpleGUI==4.60.5
-PySocks==1.7.1
 pytesseract==0.3.10
-python-dateutil==2.8.2
-python-docx==1.1.0
-python-iso639==2024.2.7
-python-magic==0.4.27
-python-multipart==0.0.9
-python-pptx==0.6.23
-pytz==2024.1
-PyYAML==6.0.1
-rapidfuzz==3.6.1
 regex==2023.6.3
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-safetensors==0.4.0
-scipy==1.12.0
-selenium==4.18.1
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
 soupsieve==2.4.1
-SQLAlchemy==2.0.27
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.14.0
-termcolor==2.3.0
 tiktoken==0.4.0
-timm==0.9.16
-tokenizers==0.14.1
-torch==2.1.0
-torchaudio==2.1.0
-torchvision==0.16.0
 tqdm==4.65.0
-transformers==4.35.0
-trio==0.24.0
-trio-websocket==0.11.1
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2024.1
-unstructured==0.12.4
-unstructured-client==0.18.0
-unstructured-inference==0.7.23
-unstructured.pytesseract==0.3.12
 urllib3==2.0.3
-Werkzeug==3.0.1
-wrapt==1.14.1
-wsproto==1.2.0
-xlrd==2.0.1
-XlsxWriter==3.2.0
 yarl==1.9.2
